Included API Tests using RESTAssured. Added PRD and README. Optimized the project run latest gradle along with uptodate dependencies.