@@ -12,7 +12,7 @@
 
 @for %%i in ("%APP_HOME%") do set APP_HOME=%%~fi
 
-@set DEFAULT_JVM_OPTS="-Xmx64m" "-Xms64m"
+@set DEFAULT_JVM_OPTS="-Xmx64m" "-Xms64m" "--enable-native-access=ALL-UNNAMED"
 
 @set CLASSPATH=%APP_HOME%\gradle\wrapper\gradle-wrapper.jar
 
